<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.saivittalb.audiogram.AboutAppActivity"
    android:background="@drawable/background_gradient1"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        style="@style/CardView2"
        android:layout_width="wrap_content"
        android:layout_height="566dp"
        tools:ignore="MissingConstraints"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:layout_width="406dp"
            android:layout_height="415dp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/audiogram"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold|italic" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp"
            android:text="Version 1.0"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="190dp"
            android:text="Developers:"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="210dp"
            android:text="Sai Vittal Battula"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:justificationMode="inter_word"
            android:text="@string/about_pp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_shape"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="backToMainPage"
        android:paddingVertical="20dp"
        android:text="@string/backtomainpage"
        android:padding="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972"
        tools:layout_editor_absoluteX="49dp" />

</androidx.constraintlayout.widget.ConstraintLayout>